--- a/.eslintrc
+++ b/.eslintrc
@@ -85,7 +85,7 @@
       "lines-between-class-members": "error",
       "max-classes-per-file": "error",
       "max-depth": "error",
-      "max-len": "warn",
+      "max-len": "off",
       "max-lines": "error",
       "max-lines-per-function": "off",
       "max-nested-callbacks": "error",
