--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint src/",
-    "test": "tsc && c8 -n src -r html -r text mocha tests/*.spec.js tests/**/*.spec.js"
+    "test": "npm run build && cross-env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' c8 -n src -r html -r text mocha -r ts-node/register 'tests/**/*.ts' 'tests/**/*.js'",
+    "build": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.35",
-    "c8": "^7.3.5",
+    "c8": "^7.7.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.14.0",
     "mocha": "^8.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
