--- a/package.json
+++ b/package.json
@@ -15,18 +15,11 @@
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
-    "@types/chai": "^4.2.16",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.35",
     "c8": "^7.7.1",
-    "cross-env": "^7.0.3",
     "eslint": "^7.14.0",
-    "mocha": "^8.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "mocha": "^8.2.1"
   },
   "dependencies": {
-    "@types/pluralize": "^0.0.29",
     "junify": "^1.0.2",
     "pluralize": "^8.0.0",
     "rrule": "^2.6.6"
