:heavy_minus_sign: :wrench: remove dependencies from babel

--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint src/",
-    "test": "c8 -n src -r html -r text mocha 'tests/**/*.js'"
+    "test": "c8 -n src -r html -r text mocha 'tests/*.js' 'tests/*/*.js'"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/eslint-plugin": "^7.12.1",
     "c8": "^7.7.1",
     "eslint": "^7.14.0",
     "mocha": "^8.2.1"
